tests/paczka1/small_fuzzy/30308894.err
Error in line 1: mszcOH A96 45,4
Error in line 3: 82iLkAw A96 83,6
Error in line 7: S9yJY2 S7 82,0
